<resources>
    <string name="app_name">The New York Times App</string>
    <string name="title_fiction">Fiction</string>
    <string name="title_nonfiction">Nonfiction</string>
    <string name="title_favorite">Favorite</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="title">Title</string>
    <string name="by_author">by</string>
    <string name="desc_example">Sample of Description text</string>
    <string name="txt_rank">Rank</string>
    <string name="txt_author">Author</string>
    <string name="txt_contributor">Contributor</string>
    <string name="txt_publisher">Publisher</string>
    <string name="txt_isbn10">ISBN-10</string>
    <string name="txt_isbn13">ISBN-13</string>
    <string name="url_example">Url Example</string>
    <string name="txt_amazon_product">Amazon Product</string>
    <string name="buy_on_amazon">Buy on Amazon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">Empty Data</string>
</resources>